# wouldveredditbot

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker_build_push.yml
src/: main.py  run.sh
