[tool.poetry]
name = "wouldveredditbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.1"
python-dotenv = "^1.0.1"
backoff = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
